--- a/index.html
+++ b/index.html
@@ -1,62 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
-  	<p>
-  	  William Shakespeare's <em>Sonnets</em> consists of 154 poems, each fourteen
-  	  lines long (three
-  	  <a href="https://en.wikipedia.org/wiki/Quatrain">quatrains</a>
- 	  followed by a rhyming
-  	  <a href="https://en.wikipedia.org/wiki/Couplet">couplet</a>).
- 	  <strong>Sonnet 18</strong> is perhaps the most famous, and begins like this:
-	</p>
-	<blockquote>
-  	  <p>
-    	Shall I compare thee to a summer's day?<br>
-    	Thou art more lovely and more temperate.<br>
-    	Rough winds do shake the darling buds of May,<br>
-    	And summer's lease hath all too short a date.
-  	  </p>
-	</blockquote>
-	<p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach <em>
-      technical sophistication</em>, the seemingly magical ability to take
-      command of your computer and get it to do your bidding. This includes
-      everything from command lines and coding to guessing keyboard shortcuts,
-      Googling error messages, and knowing when to just reboot the darn thing.
-      We believe there are <strong>at least a billion people</strong> who
-      can benefit from learning technical sophistication, probably more. To
-      join our movement, <a href="https://learnenough.com/email">sign
-      up for our official email list</a> now.
-    </p>
-    <h2>Background</h2>
+
+    <h1>Important HTML tags</h1>
+
+    <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
 
     <p>
-      Learn Enough to Be Dangerous is an outgrowth of the
-      <a href="https://railstutorial.org/">Ruby on Rails Tutorial</a> and the
-      <a href="https://www.softcover.io/">Softcover publishing platform</a>.
-      This page is part of the sample site for
-      <a href="https://www.learnenough.com/html"><em>Learn Enough HTML to
-      Be Dangerous</em></a>, which teaches the basics of
-      <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup
-      <strong>L</strong>anguage, the universal language of the World Wide Web.
-      Other related tutorials can be found at
-      <a href="https://www.learnenough.com/">learnenough.com</a>.
+      This page is designed as a quick reference for some of the common tags
+      covered in <a href="https://learnenough.com/html"><em>Learn
+      Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll
+      learn how to make HTML <em>tables</em> via <code>table</code> and
+      related tags.
     </p>
-    <img src="https://www.gravatar.com/avatar/0e8df8d05c935d789e14adfc988026dd?s=150" alt="Me">
-    
+
     <p>
-      <a href="https://twitter.com/learnenough" target="_blank"
-      rel="noopener" style="text-decoration: none;">
-        <img src="images/kitten.jpg">
-      </a>
-      You should follow Learn Enough on Twitter
-      <a href="https://twitter.com/learnenough"
-         target="_blank" rel="noopener">here</a>.
+      The tables below don't include all HTML tags, but they do list many of
+      the most important ones.
     </p>
-    
+
   </body>
 </html>
